influxdb3_enterprise/buffer/src/snapshots/influxdb3_enterprise_buffer__replica__tests__map_persisted_snapshot_for_replica-2.snap
---
source: influxdb3_enterprise/buffer/src/replica.rs
description: "persisted snapshot after mapping, as intended for the primary"
expression: mapped_snapshot
---
{
  "writer_id": "host-primary",
  "next_file_id": 0,
  "next_db_id": 2,
  "next_table_id": 2,
  "next_column_id": 6,
  "snapshot_sequence_number": 0,
  "wal_file_sequence_number": 0,
  "catalog_sequence_number": 0,
  "parquet_size_bytes": 0,
  "row_count": 0,
  "min_time": 0,
  "max_time": 0,
  "databases": [
    [
      0,
      {
        "tables": [
          [
            0,
            [
              {
                "id": 0,
                "path": "",
                "size_bytes": 0,
                "row_count": 0,
                "chunk_time": 0,
                "min_time": 0,
                "max_time": 0
              }
            ]
          ]
        ]
      }
    ]
  ]
}
