influxdb3_enterprise/buffer/src/snapshots/influxdb3_enterprise_buffer__replica__tests__map_wal_content_for_replica_field_additions-2.snap
---
source: influxdb3_enterprise/buffer/src/replica.rs
description: id map after mapping replica WAL content
expression: id_map
snapshot_kind: text
---
dbs:
  1: 0
tables:
  1: 0
columns:
  3: 0
  4: 1
  5: 2
  6: 7
